# rinha-backend-2024-app

./: .gitignore  README.md  init.sql  meson.build  models.hpp  rinha_2024_q1_project.cpp
src/: database.cpp  database.hpp  models.hpp  rinha_2024_q1_project.cpp  unexpected_codes.hpp
